# AeroJS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FINAL_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  SUMMARY.md  test_main.cpp  ultimate_test.cpp  world_class_test.cpp
.VSCodeCounter/2025-06-03_20-27-34/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cursor/rules/: directory_structure.md  rule.mdc  specifications.md
docs/: CMakeLists.txt  Doxyfile.in  implemented_features.md
docs/api/: core.md  jit.md  parser.md  transformers.md  utils.md  vm.md
docs/api/transformers/: parallel_array_optimization.md
include/aerojs/: aerojs.h  arm64_jit.h  context.h  engine.h  hyper_gc.h  jit.h  optimizer.h  parallel.h  quantum_jit.h  simd.h  ultra_parser.h  value.h  world_class_engine.h
include/aerojs/transformers/: parallel_array_optimization.h
include/nlohmann/: json_fwd.hpp
rules/: rule.mdc  specifications.md  technical_requirements.md
src/: main.cpp
src/core/: README.md  context.cpp  context.h  dummy.cpp  engine.cpp  engine.h  exception.cpp  exception.h  hyper_gc.cpp  object.cpp  object.h  quantum_jit.cpp  simple_engine.cpp  simple_engine.h  simple_value.cpp  simple_value.h  symbol.cpp  symbol.h  value.cpp  value.h  value_inline.h  world_class_engine.cpp
src/core/jit/: README.md  advanced_jit.h  arch_support.h  code_cache.cpp  code_cache.h  jit_compiler.cpp  jit_compiler.h  jit_manager.cpp  jit_manager.h  jit_profiler.cpp  jit_profiler.h  memory_manager.cpp  memory_manager.h  tiered_jit_manager.cpp  tiered_jit_manager.h
src/core/jit/backend/: backend_factory.cpp  backend_factory.h
src/core/jit/baseline/: baseline_jit.cpp  baseline_jit.h  bytecode_decoder.cpp  bytecode_decoder.h  bytecode_emitter.h  code_profiler.cpp  code_profiler.h  inline_cache_manager.cpp  inline_cache_manager.h  ir_builder.cpp  ir_builder.h  ir_generator.cpp  ir_generator.h  ir_optimizer.cpp  ir_optimizer.h  ir_validator.cpp  ir_validator.h  register_allocator.cpp  register_allocator.h  simd_optimizer.h  type_inference.cpp  type_inference.h
src/core/jit/bytecode/: bytecode.cpp  bytecode.h  bytecode_function.h  bytecode_generator.h  bytecode_instruction.cpp  bytecode_instruction.h  bytecode_module.cpp  bytecode_module.h  bytecode_opcodes.h  bytecode_parser.cpp  bytecode_parser.h  bytecode_structure.h
src/core/jit/deoptimizer/: deoptimizer.cpp  deoptimizer.h
src/core/jit/ic/: arm64_ic_generator.cpp  arm64_ic_generator.h  code_buffer.cpp  ic_code_generator.cpp  ic_code_generator.h  ic_logger.cpp  ic_logger.h  ic_optimizer.cpp  ic_optimizer.h  ic_performance_analyzer.cpp  ic_performance_analyzer.h  ic_visualization.cpp  ic_visualization.h  ic_visualizer.cpp  ic_visualizer.h  inline_cache.cpp  inline_cache.h  riscv_ic_generator.cpp  riscv_ic_generator.h  x86_64_ic_generator.cpp
src/core/jit/ir/: constant_folding.cpp  dead_code_elimination.cpp  ir.h  ir_builder.cpp  ir_builder.h  ir_function.cpp  ir_function.h  ir_graph.cpp  ir_graph.h  ir_instruction.cpp  ir_instruction.h  ir_optimizer.cpp  ir_optimizer.h  ir_validator.cpp  ir_validator.h  type_analyzer.cpp  type_analyzer.h  type_specialization.cpp  type_specializer.cpp  type_specializer.h
src/core/jit/metatracing/: trace_optimizer.cpp  trace_optimizer.h  trace_recorder.cpp  trace_recorder.h  tracing_jit.cpp  tracing_jit.h
src/core/jit/optimizing/: constant_folding.cpp  constant_folding.h  optimizing_jit.cpp  optimizing_jit.h  parallel_array_optimization.cpp  super_optimizing_jit.cpp  super_optimizing_jit.h  tiered_jit.cpp  tiered_jit.h
src/core/jit/profiler/: execution_profiler.cpp  execution_profiler.h  jit_profiler.cpp  jit_profiler.h  profiler.cpp  profiler.h  type_info.cpp  type_info.h
src/core/jit/registers/: register_allocator.h  x86_64_registers.h
src/core/mcp/: mcp_manager.cpp  mcp_manager.h  mcp_server.cpp
src/core/mcp/examples/: mcp_client_example.cpp
src/core/mcp/server/: mcp_server.cpp  mcp_server.h
src/core/mcp/tool/: mcp_tool_manager.cpp  mcp_tool_manager.h  tool.cpp  tool.h  tool_result.cpp  tool_result.h
src/core/mcp/tools/: basic_tools.cpp  basic_tools.h
src/core/mcp/utils/: mcp_utils.cpp  mcp_utils.h
src/core/network/: http_server.cpp  http_server.h  websocket_server.cpp  websocket_server.h
src/core/parser/: README.md  error_recovery.h  hyper_parser.h  incremental_parser.cpp  incremental_parser.h  parser.cpp  parser.h  parser_error.h  token.cpp  token.h
src/core/parser/ast/: ast_visitor.h  node.h  node_type.h  (+1 more)
src/core/runtime/: README.md  context.cpp  context.h  global_object.cpp  global_object.h  object.h
src/core/transformers/: README.md  array_optimization.cpp  array_optimization.h  constant_folding.cpp  constant_folding.h  dead_code_elimination.cpp  dead_code_elimination.h  identifier_lookup_optimization.cpp  identifier_lookup_optimization.h  inline_functions.cpp  inline_functions.h  optimizers_config.json  parallel_array_optimization.cpp  parallel_array_optimization.h  transform_pipeline_builder.h  transformer.cpp  transformer.h  type_inference.cpp  type_inference.h
src/core/utils/: logger.h
src/core/vm/: README.md  vm.cpp  vm.h
src/utils/: README.md  logging.cpp  logging.h  test_logging.cpp
src/utils/containers/: README.md
src/utils/memory/: README.md
src/utils/platform/: cpu_features.cpp  cpu_features.h  simd_operations.h
src/utils/time/: timer.cpp  timer.h
tests/: CMakeLists.txt
tests/core/: test_context.cpp  test_engine.cpp  test_value.cpp
tests/core/runtime/values/: gc_test.cpp  symbol_test.cpp  value_test.cpp
tests/integration/: engine_integration_test.cpp
tests/jit/: jit_compiler_test.cpp  optimizing_jit_test.cpp  riscv_vector_test.cpp
tests/jit/ir/: ir_graph_test.cpp
tests/jit/metatracing/: trace_recorder_test.cpp
tests/jit/profiler/: type_info_test.cpp
tests/performance/: jit_performance_test.cpp  value_performance_test.cpp
tests/transformers/: identifier_lookup_optimization_test.cpp  parallel_array_optimization_test.cpp
utils/memory/gc/: generational_gc.cpp
(+287 files in other folders)
